# kasane

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  alloc_budget.json  flake.nix  index.html  renovate.json5  rust-toolchain.toml
examples/wasm/cursor-line/: Cargo.toml  kasane-plugin.toml
kasane/: Cargo.toml
kasane-core/: Cargo.toml
kasane-core-tests/: Cargo.toml
kasane-core-tests/src/: lib.rs
kasane-core-tests/tests/: a3_transparent_tau.rs  delta_neutrality.rs  dirty_flags_property.rs  history_app_view.rs  history_apply_hook.rs  history_roundtrip.rs  history_selection.rs  inference_boundedness.rs  inference_property.proptest-regressions  latency_budget.rs  plugin_emit_diagnostic.rs  plugin_integration.rs  rendering_pipeline.rs  salsa_projection_coverage_level2.rs  salsa_verification.rs  scroll_characterization.rs  scroll_policy_contract.rs  scroll_router_parity.rs  semantic_zoom_e2e.rs  surface_registry.rs  trace_equivalence.proptest-regressions  trace_equivalence.rs  visual_faithfulness.rs
kasane-core/benches/: bridge_overhead.rs  dispatch_overhead.rs  fixtures.rs  iai_pipeline.rs  latency.rs  rendering_pipeline.rs  replay.rs
kasane-core/proptest-regressions/state/: selection_set_proptests.txt
kasane-core/src/: clipboard.rs  config.rs  element.rs  event_loop.rs  input.rs  io.rs  layout.rs  lib.rs  pane.rs  perf.rs  plugin.rs  plugin_prelude.rs  protocol.rs  render.rs  salsa_db.rs  salsa_inputs.rs  salsa_queries.rs  salsa_sync.rs  salsa_views.rs  scroll.rs  session.rs  state.rs  test_support.rs  test_utils.rs  workspace.rs
kasane-core/src/config/: colors.rs  effects.rs  gui.rs  kdl_parser.rs  kdl_writer.rs  mod.rs  plugins.rs  theme.rs  unified.rs
kasane-core/src/display/: content_annotation.rs  fold_state.rs  mod.rs  navigation.rs  projection.rs  resolve.rs  segment_map.rs  stability.rs  tests.rs  unit.rs  universal_reveal_state.rs
kasane-core/src/display_algebra/: apply.rs  bridge.rs  derived.rs  mod.rs  normalize.rs  primitives.rs  proptests.rs  tests.rs
kasane-core/src/error/: mod.rs
kasane-core/src/event_loop/: context.rs  dispatch.rs  mod.rs  reload_orchestrator.rs  session.rs  surface.rs
kasane-core/tests/: a3_transparent_tau.rs  cache_soundness.rs  delta_neutrality.rs  dirty_flags_property.rs  external_plugin.rs  golden_grid.rs  history_selection.rs  inference_boundedness.rs  inference_property.rs  latency_budget.rs  plugin_integration.rs  rendering_pipeline.rs  salsa_history_sync.rs  salsa_pipeline_comparison.rs  salsa_projection_coverage.rs  salsa_verification.rs  salsa_views_verification.rs  scroll_characterization.rs  scroll_router_parity.rs  scroll_runtime.rs  semantic_zoom_e2e.rs  session_surface_parity.rs  surface_registry.rs  trace_equivalence.proptest-regressions  trace_equivalence.rs  visual_faithfulness.rs
kasane-gui/: Cargo.toml
kasane-gui/benches/: cpu_rendering.rs  parley_pipeline.rs
kasane-gui/src/: animation.rs  app.rs  backend.rs  colors.rs  diagnostics_overlay.rs  error.rs  ime.rs  input.rs  lib.rs
kasane-gui/tests/: golden_render.rs
kasane-internal/: Cargo.toml
kasane-internal/src/: lib.rs
kasane-macros/: Cargo.toml
kasane-macros/src/: analysis.rs  component.rs  dirty_tracked.rs  handler_table.rs  lib.rs  plugin.rs  variant_meta.rs
kasane-macros/tests/: macros.rs
kasane-plugin-package/: Cargo.toml
kasane-plugin-package/src/: fs_util.rs  lib.rs  manifest.rs  package.rs
kasane-plugin-sdk/: Cargo.toml  LICENSE-MIT  README.md
kasane-plugin-sdk-macros/: Cargo.toml  LICENSE-APACHE  README.md
kasane-plugin-sdk-macros/src/: defaults.rs  define_plugin.rs  key_map.rs  lib.rs  lint.rs  manifest.rs  sdk_helpers.rs
kasane-plugin-sdk-macros/wit/: plugin.wit
kasane-plugin-sdk-test/: Cargo.toml  README.md
kasane-plugin-sdk-test/src/: lib.rs
kasane-plugin-sdk/src/: kak.rs  kak_cmd.rs  lib.rs  test.rs
kasane-plugin-sdk/tests/: macros.rs
kasane-plugin-sdk/wit/: plugin.wit
kasane-protocol/: Cargo.toml
kasane-protocol/src/: message.rs  style.rs  tests.rs  wire.rs
kasane-tui/: Cargo.toml
kasane-tui/benches/: backend.rs  iai_backend.rs
kasane-tui/src/: backend.rs  diagnostics_overlay.rs  error.rs  event_handler.rs  input.rs  kitty.rs  lib.rs  paint_hooks.rs  sgr.rs  terminal_style.rs
kasane-vello-spike/: Cargo.toml
kasane-vello-spike/benches/: spike_bench.rs
kasane-vello-spike/src/: lib.rs  scene_translate.rs
kasane-wasm/: Cargo.toml
kasane-wasm-bench/: Cargo.toml
kasane-wasm-bench/benches/: component_model.rs  data_crossing.rs  raw_overhead.rs  realistic.rs
kasane-wasm-bench/fixtures/: component-plugin.wasm  element-builder.wasm  state-reader.wasm  string-echo.wasm
kasane-wasm-bench/guests/: build.sh
kasane-wasm-bench/src/: lib.rs
kasane-wasm-bench/tests/: smoke.rs
kasane-wasm-bench/wit/: bench.wit
kasane-wasm/benches/: io_event.rs
kasane-wasm/bundled/: color-preview.toml  color-preview.wasm  cursor-line.toml  cursor-line.wasm  fuzzy-finder.toml  fuzzy-finder.wasm  line-numbers.wasm  pane-manager.toml  pane-manager.wasm  sel-badge.toml  sel-badge.wasm  smooth-scroll.toml  smooth-scroll.wasm
kasane-wasm/fixtures/: color-preview.toml  color-preview.wasm  cursor-line.toml  cursor-line.wasm  fuzzy-finder.toml  fuzzy-finder.wasm  image-preview.wasm  instantiate-trap.toml  instantiate-trap.wasm  line-numbers.wasm  pane-manager.wasm  prompt-highlight.toml  prompt-highlight.wasm  sel-badge.toml  sel-badge.wasm  selection-algebra.wasm  session-ui.toml  session-ui.wasm  smooth-scroll.toml  smooth-scroll.wasm  surface-probe.toml  surface-probe.wasm  tier1-state.toml  tier1-state.wasm
kasane-wasm/src/: abi.rs  adapter.rs  authority.rs  cache.rs  capability.rs  convert.rs  error.rs  host.rs  lib.rs  manifest.rs  tests.rs
kasane-wasm/wit/: plugin.wit
kasane-wit/: Cargo.toml
kasane-wit/src/: lib.rs
kasane-wit/wit/: plugin.wit
kasane/src/: cli.rs  http_manager.rs  init_cmd.rs  lib.rs  locked_wasm_provider.rs  main.rs  orchestrator.rs  plugin_lock.rs  plugin_store.rs  process.rs  process_manager.rs  widget_cmd.rs  workspace_lock.rs
(+692 files in other folders)
