[workspace]
members = ["kasane", "kasane-core", "kasane-tui", "kasane-macros", "kasane-gui", "kasane-wasm-bench", "kasane-wasm"]
exclude = ["examples/line-numbers", "examples/wasm-test", "kasane-plugin-sdk", "kasane-wasm-bench/guests/string-echo", "kasane-wasm-bench/guests/element-builder", "kasane-wasm-bench/guests/state-reader", "kasane-wasm-bench/guests/component-plugin", "kasane-wasm/guests/cursor-line", "kasane-wasm/guests/line-numbers", "kasane-wasm/guests/color-preview", "kasane-wasm/guests/sel-badge"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
kasane-core = { path = "kasane-core" }
kasane-tui = { path = "kasane-tui" }
kasane-macros = { path = "kasane-macros" }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.14"
crossterm = "0.28"
crossbeam-channel = "0.5"
thiserror = "2"
arboard = "3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.2"
unicode-segmentation = "1.11"
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.14"
hdrhistogram = "7"
toml = "0.8"
bitflags = "2"
compact_str = { version = "0.9", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
kasane-gui = { path = "kasane-gui" }
kasane-wasm = { path = "kasane-wasm" }
winit = "0.30"
wgpu = "28"
glyphon = "0.10"
pollster = "0.4"

[profile.dev.package."*"]
opt-level = 2

[profile.profiling]
inherits = "release"
debug = true
strip = false
