[workspace]
members = ["kasane", "kasane-core", "kasane-plugin-model", "kasane-plugin-package", "kasane-tui", "kasane-macros", "kasane-gui", "kasane-vello-spike", "kasane-wasm-bench", "kasane-wasm", "kasane-syntax"]
exclude = ["examples/image-test", "examples/line-numbers", "examples/selection-algebra-native", "examples/virtual-text-demo", "examples/wasm/cursor-line", "examples/wasm/color-preview", "examples/wasm/sel-badge", "examples/wasm/fuzzy-finder", "examples/wasm/pane-manager", "examples/wasm/prompt-highlight", "examples/wasm/smooth-scroll", "tools/wasm-test", "kasane-plugin-sdk", "kasane-plugin-sdk-macros", "kasane-wasm-bench/guests/string-echo", "kasane-wasm-bench/guests/element-builder", "kasane-wasm-bench/guests/state-reader", "kasane-wasm-bench/guests/component-plugin", "kasane-wasm/guests/surface-probe"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
kasane-core = { path = "kasane-core" }
kasane-plugin-model = { path = "kasane-plugin-model" }
kasane-plugin-package = { path = "kasane-plugin-package" }
kasane-tui = { path = "kasane-tui" }
kasane-macros = { path = "kasane-macros" }
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17"
crossterm = "0.29"
crossbeam-channel = "0.5"
thiserror = "2"
arboard = "3"
anyhow = "1"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.2"
unicode-segmentation = "1.11"
criterion = { version = "0.8", features = ["html_reports"] }
iai-callgrind = "0.16"
toml = "0.9"
bitflags = "2"
compact_str = { version = "0.9", features = ["serde"] }
dyn-clone = "1"
salsa = "0.26"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
itoa = "1"
resvg = { version = "0.47", default-features = false, features = ["text", "system-fonts"] }
kasane-gui = { path = "kasane-gui" }
kasane-wasm = { path = "kasane-wasm" }
winit = "0.30"
wgpu = "29"
# ADR-031 — Parley + swash are the production text stack
# (cosmic-text retired in Phase 11).
parley = "0.9"
swash = "0.2"
etagere = "0.3"
lru = { version = "0.18", default-features = false }
rustc-hash = "2"
pollster = "0.4"
base64 = "0.22"
postcard = { version = "1", features = ["alloc"] }
sha2 = "0.11"
kdl = "6.2"
regex-lite = "0.1"
glob = "0.3"
notify = "7"
tree-sitter = "0.26"
kasane-syntax = { path = "kasane-syntax" }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
url = "2"
futures-util = "0.3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"

[profile.bench]
strip = false

[profile.dev.package."*"]
opt-level = 2

[profile.profiling]
inherits = "release"
debug = true
strip = false
