[package]
name = "kasane-core-tests"
version = "0.7.0"
edition.workspace = true
license.workspace = true
publish = false

# This crate exists solely to host `kasane-core` integration tests
# (the `tests/` tree). Splitting it out keeps `cargo test --lib -p
# kasane-core` as the fast inner loop — the library crate compiles in
# seconds, while integration tests depend on the optimised dev profile
# of the entire kasane-core surface and dominate the test build cost.
#
# The crate has no library code (`lib.rs` is intentionally absent);
# Cargo discovers tests under `tests/`. Run with:
#
#     cargo test -p kasane-core-tests
[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
kasane-core = { workspace = true }
compact_str = { workspace = true }
proptest = "1"
serde_json = { workspace = true }
