[package]
name = "kasane-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
kasane-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
bitflags = { workspace = true }
compact_str = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
perf-tracing = []
bench-alloc = []

[dependencies.salsa]
workspace = true

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
iai-callgrind = { workspace = true }
hdrhistogram = { workspace = true }
proptest = "1"

[[bench]]
name = "rendering_pipeline"
harness = false

[[bench]]
name = "iai_pipeline"
harness = false

[[bench]]
name = "replay"
harness = false

[[bench]]
name = "latency"
harness = false

[[bin]]
name = "alloc_budget"
required-features = ["bench-alloc"]
