[package]
name = "kasane-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true

[dependencies]
arboard = { workspace = true }
kasane-macros = { workspace = true }
kasane-plugin-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
bitflags = { workspace = true }
compact_str = { workspace = true }
dyn-clone = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }
itoa = { workspace = true }
kdl = { workspace = true }
image = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }

[features]
perf-tracing = []
bench-alloc = []
tui-image = ["image"]
svg = ["resvg"]

[dependencies.salsa]
workspace = true

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
iai-callgrind = { workspace = true }
hdrhistogram = { workspace = true }
proptest = "1"
tempfile = "3"

[[bench]]
name = "rendering_pipeline"
harness = false

[[bench]]
name = "iai_pipeline"
harness = false

[[bench]]
name = "replay"
harness = false

[[bench]]
name = "latency"
harness = false

[[bin]]
name = "alloc_budget"
required-features = ["bench-alloc"]
