[package]
name = "kasane-gui"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[dependencies]
kasane-core = { workspace = true, features = ["svg"] }
winit = { workspace = true }
wgpu = { workspace = true }
# ADR-031 Phase 11 — cosmic-text retired in favour of Parley + swash.
parley = { workspace = true }
swash = { workspace = true }
etagere = { workspace = true }
lru = { workspace = true }
rustc-hash = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
kasane-core = { workspace = true }

[[bench]]
name = "cpu_rendering"
harness = false

[[bench]]
name = "parley_pipeline"
harness = false
