[package]
name = "kasane-macros"
version = "0.6.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = "1"
kasane-core = { path = "../kasane-core" }
