[package]
name = "kasane-plugin-package"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
kasane-core = { workspace = true }
kasane-plugin-model = { workspace = true }
anyhow = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
