[package]
name = "kasane-plugin-sdk"
version = "0.3.0"
edition = "2024"
description = "SDK for writing Kasane WASM plugins"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yus314/kasane"
rust-version = "1.85"
keywords = ["kakoune", "wasm", "plugin", "component-model"]
categories = ["development-tools"]
readme = "README.md"

[features]
test-harness = []

[dependencies]
wit-bindgen = "0.53"
kasane-plugin-sdk-macros = { path = "../kasane-plugin-sdk-macros", version = "=0.3.0" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

[dev-dependencies]
trybuild = "1"
