[package]
name = "kasane-plugin-sdk"
version = "0.7.0"
edition = "2024"
description = "SDK for writing Kasane WASM plugins"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yus314/kasane"
rust-version = "1.85"
keywords = ["kakoune", "wasm", "plugin", "component-model"]
categories = ["development-tools"]
readme = "README.md"

[features]
test-harness = ["dep:kasane-plugin-sdk-test"]

[dependencies]
wit-bindgen = "0.53"
kasane-plugin-sdk-macros = { path = "../kasane-plugin-sdk-macros", version = "=0.7.0" }
kasane-plugin-sdk-test = { path = "../kasane-plugin-sdk-test", version = "=0.7.0", optional = true }
kasane-wit = { path = "../kasane-wit", version = "=0.7.0" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
trybuild = "1"
