[package]
name = "kasane-protocol"
version = "0.7.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
compact_str = { workspace = true }
