[package]
name = "kasane-tui"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[features]
salsa-view = ["kasane-core/salsa-view"]

[dependencies]
kasane-core = { workspace = true }
crossterm = { workspace = true }
crossbeam-channel = { workspace = true }
arboard = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "backend"
harness = false
