[package]
name = "kasane-tui"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
kasane-core = { workspace = true, features = ["tui-image"] }
crossterm = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "backend"
harness = false
