[package]
name = "kasane-tui"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[dependencies]
kasane-core = { workspace = true, features = ["tui-image", "svg"] }
crossterm = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
iai-callgrind = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "backend"
harness = false

[[bench]]
name = "iai_backend"
harness = false
