[package]
name = "kasane-wasm-bench"
version = "0.4.0"
edition.workspace = true
license.workspace = true
autobenches = false

[lib]
bench = false

[dependencies]
wasmtime = "43"
wasmtime-wasi = "43"
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "raw_overhead"
harness = false

[[bench]]
name = "data_crossing"
harness = false

[[bench]]
name = "component_model"
harness = false

[[bench]]
name = "realistic"
harness = false
