[package]
name = "kasane-wasm"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
kasane-core = { workspace = true }
wasmtime = "43"
wasmtime-wasi = "43"
anyhow = { workspace = true }
tracing = { workspace = true }
compact_str = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "io_event"
harness = false
