[package]
name = "kasane-wasm"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[dependencies]
kasane-core = { workspace = true }
kasane-plugin-model = { workspace = true }
kasane-plugin-package = { workspace = true }
wasmtime = "43"
wasmtime-wasi = "43"
anyhow = { workspace = true }
tracing = { workspace = true }
compact_str = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "io_event"
harness = false
