[package]
name = "kasane"
version = "0.5.0"
edition.workspace = true
license.workspace = true

[features]
default = ["wasm-plugins"]
gui = ["dep:kasane-gui"]
wasm-plugins = ["dep:kasane-wasm", "dep:notify"]

[dependencies]
kasane-core = { workspace = true }
kasane-plugin-package = { workspace = true }
kasane-tui = { workspace = true }
kasane-gui = { workspace = true, optional = true }
kasane-wasm = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
anyhow = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros"] }
portable-pty = "0.9"
reqwest = { workspace = true }
semver = "1"
url = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
