[package]
name = "kasane-wasm-cursor-line"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable the SDK's mock host so this plugin can be unit-tested natively.
test-harness = ["kasane-plugin-sdk/test-harness"]

[dependencies]
kasane-plugin-sdk = { path = "../../../kasane-plugin-sdk" }
wit-bindgen = "0.53"

[profile.release]
opt-level = "s"
lto = true
